switch to njk because of some wacky prop passing probs

--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -8,7 +8,12 @@
   <title>{{title}}</title>
 </head>
 <body>
-  <h1>{{title}}</h1>
-  {{content}}
+  <heading>
+    <a href="/">
+      {% react 'components/Logo', 'render', 'static' %}
+    </a>
+    <h1>{{title}}</h1>
+  </heading>
+  {{content | safe}}
 </body>
 </html>
