refactor variables to in-line filters

--- a/src/_includes/talk-layout.html
+++ b/src/_includes/talk-layout.html
@@ -4,5 +4,4 @@ layout: layout
 
 {{content | safe}}
 
-{% set talks = collections.talks | formatTalks %}
-{% react 'components/ImageCarousel.jsx', 'render', 'lazy', 'talks', talks %}
+{% react 'components/ImageCarousel', 'render', 'lazy', 'talks', (collections.talks | formatTalks) %}
